1. Метод .of [#364505]