@@ -2,9 +2,8 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -13,34 +12,30 @@ public class NotifyAccountTest {
 
     @Test
     public void sentNoDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+        Set<Account> expect = Set.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
-                )
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 
     @Test
     public void sentHasDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("123", "Petr Arsentev", "0000012"),
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("133", "Petr Arsentev", "0000012")
         );
-        HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+        Set<Account> expect = Set.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001"),
                         new Account("133", "Petr Arsentev", "0000012")
-                )
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
